Card Maker Version History
--------------------------
1.2.0.0
- Added group logic to switch statements so multiple matches can have the same result
- Updated ClosedXML (support newer Excel functionality)
- Added alternative parameter sets for the font <f> tag in FormattedText
- Added FormattedText marginleft and marginright tags.
- Fixed issue with page resizing/margins on PDF export
- Added * option for allowed layout column to indicate the row should be included in all layouts
- Added ability to preview color changes in the color selection dialog. This works with 1+ elements selected.
- Added ability to apply color to graphic elements. This is applied to the image (not other aspects like background/border).
- Expanded allowed_layout functionality to support a semi-colon delimited set.

1.1.0.0
- Changed card export for layouts marked as back to be right-aligned
- Added ability to export a layout at 180 degrees
- Added ability to create reference elements (an element owned by a layout but accessible in others)
- When adding a Google reference the prompt will not disrupt the add reference process.
- Reference loading is now multi-threaded so you don't have to wait as long!
- Additional override for background shapes allowing for custom opacity
- Added ability to select alpha in the color selection dialog.
- Border render on exports is now controlled per layout instead of at the application level.
- Updated Color dialog to allow typing/pasting of hex values.
- Added ability to export with only crosses in the corners with layouts
- Changed border functionality on export to apply if both border is enabled on the layout and border export is enabled in the general settings
- Added support for the non-deprecated Google Sheets API
- Added support for AutoSave (Disabled by default, can toggle with Ctrl+T)
- Support for loading excel files! (TheMikaus)
- Added basic implementation of FormattedText auto-scale (only applies to main font size)

1.0.1.0