@@ -44,7 +44,7 @@
     <exportLayoutBorderCrossSize>0</exportLayoutBorderCrossSize>
   </Layout>
   <Layout combineReferences="false" width="300" height="250" buffer="0" Name="Formatted Text" defaultCount="1" dpi="100" drawBorder="true">
-    <Element variable="&lt;b&gt;bold&lt;c&gt;&lt;/b&gt; &lt;yo=1&gt;&lt;i&gt;italic&lt;c&gt;&lt;/i&gt;&lt;/yo&gt;&lt;b&gt;&lt;i&gt;bold-italic&lt;c&gt;&lt;/b&gt; &lt;s&gt;strike&lt;c&gt;&lt;/s&gt;&lt;/i&gt;and &lt;u&gt;underline&lt;/u&gt; too...&lt;br&gt;Transparent &lt;bgc=250183120180&gt;background color&lt;/bgc&gt;&lt;br&gt;Here is a background image:&lt;br&gt;&lt;bgi=/sample_bg.png;-4;-3;64;30&gt;image&lt;/bgi&gt; and font &lt;fc=255000255&gt;color change&lt;/fc&gt;&lt;br&gt;HTML rendering is &lt;b&gt;not&lt;/b&gt; simple!&lt;br&gt;Mi&lt;xo=-1&gt;&lt;b&gt;&lt;i&gt;d-w&lt;/i&gt;&lt;/b&gt;&lt;xo=-1&gt;ord formatting is also possible... but &lt;q&gt;difficult.&lt;q&gt; :|" type="FormattedText" x="12" y="8" width="277" height="230" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="1" verticalalign="1" opacity="255" lineheight="27" wordspace="-1" justifiedtext="false" name="Text" font="Arial;16;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Element variable="&lt;b&gt;bold&lt;c&gt;&lt;/b&gt; &lt;yo=1&gt;&lt;i&gt;italic&lt;c&gt;&lt;/i&gt;&lt;/yo&gt;&lt;b&gt;&lt;i&gt;bold-italic&lt;c&gt;&lt;/b&gt; &lt;s&gt;strike&lt;c&gt;&lt;/s&gt;&lt;/i&gt;and &lt;u&gt;underline&lt;/u&gt; too...&lt;br&gt;Transparent &lt;bgc=250183120180&gt;background color&lt;/bgc&gt;&lt;br&gt;Here is a background image:&lt;br&gt;&lt;bgi=/sample_bg.png;-4;-3;64;30&gt;image&lt;/bgi&gt; and font &lt;fc=255000255&gt;color change&lt;/fc&gt;&lt;br&gt;HTML rendering is &lt;b&gt;not&lt;/b&gt; simple!&lt;br&gt;Mi&lt;xo=-1&gt;&lt;b&gt;&lt;i&gt;d-w&lt;/i&gt;&lt;/b&gt;&lt;xo=-1&gt;ord formatting is also possible... &lt;ic=0x00ff00&gt;&lt;bgi=/sample_bg.png;-4;-3;110;30&gt;but &lt;q&gt;difficult.&lt;q&gt;&lt;/bgi&gt;&lt;/ic&gt; :|" type="FormattedText" x="12" y="8" width="277" height="230" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="1" verticalalign="1" opacity="255" lineheight="27" wordspace="-1" justifiedtext="false" name="Text" font="Arial;16;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="#roundedrect;0;-;-;10#" type="Shape" x="11" y="67" width="228" height="30" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" lineheight="0" wordspace="0" justifiedtext="false" name="Box" font="" elementcolor="0xFF1E00FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <exportRotation>0</exportRotation>
     <exportTransparentBackground>false</exportTransparentBackground>
@@ -78,7 +78,7 @@
     <exportLayoutBorderCrossSize>0</exportLayoutBorderCrossSize>
   </Layout>
   <Layout combineReferences="false" width="600" height="600" buffer="0" Name="Formatted Text Margins" defaultCount="1" dpi="300" drawBorder="true">
-    <Element variable="&lt;marginleft=30;150;350&gt;&lt;marginright=200;0;50&gt;&lt;marginright=150;50;80&gt;&lt;marginright=200;250;300&gt;&lt;marginright=250;300;350&gt;&lt;b&gt;TITLE&lt;/b&gt;&lt;br&gt;This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and &lt;img=images\gear.png&gt; lines and lines to test wrapping at different columns.&lt;br&gt;&lt;img=images\gear.png&gt;Some more text to end it." type="FormattedText" x="61" y="100" width="490" height="352" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="18" wordspace="0" justifiedtext="false" name="FormattedText" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Element variable="&lt;marginleft=30;150;350&gt;&lt;marginright=200;0;50&gt;&lt;marginright=150;50;80&gt;&lt;marginright=200;250;300&gt;&lt;marginright=250;300;350&gt;&lt;b&gt;TITLE&lt;/b&gt;&lt;br&gt;This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and &lt;ic=0xFF0000&gt;&lt;img=images\gear.png&gt;&lt;/ic&gt; lines and lines to test wrapping at different columns.&lt;br&gt;&lt;img=images\gear.png&gt;Some more text to end it." type="FormattedText" x="61" y="100" width="490" height="352" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="18" wordspace="0" justifiedtext="false" name="FormattedText" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="351" y="99" width="200" height="50" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeUpperRight2" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x0003FFFF" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="401" y="99" width="150" height="80" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeUpperRight1" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0xFFFC00FF" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="301" y="402" width="250" height="50" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeLowerRight2" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x0FFF00FF" enabled="true" outlinecolor="0x000000FF" />
